# gol

./: .gitignore  .gitmodules  README.md
include/: Game.hh  GameOfLife.hh  GolViewer.hh  Window.hh
proj/cmake/: CMakeLists.txt
src/: GameOfLife.cc  GolViewer.cc  main.cc
